Updating the changelog, and adding the docs to the product extras.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,7 +1,15 @@
 Changelog
 =========
 
+2.0.0 (2014-04-29)
+------------------
+
+* Added ``gs.dmarc.lookup.ReceiverPolicy.noDmarc``, and returning it from 
+  ``gs.dmarc.lookup.lookup_receiver_policy``. Bumped the version number
+  because of this.
+* Added Sphinx documentation
+
 1.0.0 (2014-04-24)
 ------------------
 
-- Initial release
+* Initial release
